# nersc-claude-plugin

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  run-server.sh
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
artifacts/NM-38/: README.md  client-components-2026-07-10.md  transcript-2026-07-10.md  verification-2026-07-10.md
hooks/: hooks.json  session-context.sh
packaging/: codex-marketplace.json
scripts/: stage-codex-marketplace.sh
skills/nersc/: SKILL.md
src/nersc_mcp/: __init__.py  knowledge.py  server.py  slurm.py  store.py  util.py
src/nersc_mcp/tools/: allocate.py  cancel.py  context.py  jobinfo.py  postmortem.py  queue_advise.py  queue_wait.py  status.py  storage.py  submit.py
tests/: test_allocate.py  test_bootstrap.sh  test_bootstrap_harness.py  test_cancel.py  test_codex_bootstrap.py  test_codex_plugin.py  test_context_store.py  test_jobinfo.py  test_plugin_hooks.py  test_postmortem.py  test_queue_advise.py  test_queue_wait.py  test_server_boundary.py  test_skill_lint.py  test_storage_and_status.py  test_submit.py  test_tool_protocol_contract.py
tests/fixtures/: iris_queuewait.json  nm38_tool_schemas.json
tests/integration/: mcp_smoke.py
