[project]
name = "nersc-mcp"
version = "0.2.0"
description = "MCP server that runs natively on NERSC Perlmutter: safe, knowledge-encoded SLURM/storage tools for Claude Code"
requires-python = ">=3.9"
authors = [
    { name = "Cedric Lim" },
    { name = "Claude (Anthropic)" },
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
nersc-mcp = "nersc_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
